--- a/.github/workflows/dependencycheck.yaml
+++ b/.github/workflows/dependencycheck.yaml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup Java 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
       - name: Build project with Maven
         run: mvn clean install
       - name: Depcheck
